--- a/demo-mjml.html
+++ b/demo-mjml.html
@@ -145,7 +145,7 @@
 
     <div class="ad-cont">
       <div id="native-carbon"></div>
-      <script async type="text/javascript" src="./js/carbon.js?v4"></script>
+      <script async type="text/javascript" src="./js/carbon-v2.js"></script>
     </div>
 
 
