--- a/demo.html
+++ b/demo.html
@@ -156,7 +156,7 @@
     <div class="ad-cont">
       <!-- <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=grapesjscom" id="_carbonads_js"></script> -->
       <div id="native-carbon"></div>
-      <script async type="text/javascript" src="./js/carbon.js?v4"></script>
+      <script async type="text/javascript" src="./js/carbon-v2.js"></script>
     </div>
 
     <div id="gjs" style="height:0px; overflow:hidden">
