--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div>
 
       <div id="native-carbon"></div>
-      <!-- <script async type="text/javascript" src="./js/carbon.js?v4"></script> -->
+      <!-- <script async type="text/javascript" src="./js/carbon-v2.js"></script> -->
 
       <div class="bann-cont-c">
         <div class="bann-cont">
