--- a/index.html
+++ b/index.html
@@ -316,10 +316,15 @@
           <div class="sponsors--direct">
           </div>
           <div class="sponsors">
-            <div class="flex flex-center">
+            <div class="flex flex-center" style="gap: 25px;">
               <div class="sp-gold-item">
                 <a href="https://www.phreesia.com" target="_blank" class="block">
                   <img class="sp-logo" src="./img/phreesia_logo.png"/>
+                </a>
+              </div>
+              <div class="sp-gold-item">
+                <a href="https://www.braze.com" target="_blank" class="block">
+                  <img class="sp-logo" src="./img/braze_logo.svg"/>
                 </a>
               </div>
             </div>
