--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       <div class="btns-cont">
         <a href="./demo.html" class="btn try btn-rnd">Webpage Demo</a>
         <a href="./demo-newsletter-editor.html" class="btn try btn-rnd">Newsletter Demo</a>
+        <a href="./demo-mjml.html" class="btn try btn-rnd">MJML Demo</a>
         <div class="device-small">Sorry but your device is too small for the editor. See below for more information</div>
       </div>
 
