--- a/demo-mjml.html
+++ b/demo-mjml.html
@@ -5,14 +5,14 @@
     <title>GrapesJS Demo - Free Open Source MJML Newsletter Builder</title>
     <meta name="description" content="GrapesJS MJML Newsletter Builder - Best Free Open Source Responsive MJML Newsletter Editor">
     <meta name="keywords" content="newsletter builder, web template editor, html builder, html editor">
-    <link rel="stylesheet" href="./stylesheets/grapes.min.css?v0.20.3">
+    <link rel="stylesheet" href="./stylesheets/grapes.min.css?v0.20.4">
     <link rel="stylesheet" href="./stylesheets/tooltip.css">
     <link rel="stylesheet" href="./stylesheets/toastr.min.css">
     <link rel="stylesheet" href="./stylesheets/grapesjs-mjml.css">
     <link rel="stylesheet" href="stylesheets/demos.css?v2">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/grapes.min.js?v0.20.3"></script>
+    <script src="js/grapes.min.js?v0.20.4"></script>
     <script src="./js/toastr.min.js"></script>
     <script src="./js/ajaxable.min.js"></script>
     <script src="js/aviary.js"></script>
@@ -154,9 +154,19 @@
       var lp = './img/';
       var plp = 'https://via.placeholder.com/350x250/';
       var images = [
-        plp+'78c5d6/fff/image1.jpg', plp+'459ba8/fff/image2.jpg', plp+'79c267/fff/image3.jpg',
-        plp+'c5d647/fff/image4.jpg', plp+'f28c33/fff/image5.jpg', plp+'e868a2/fff/image6.jpg', plp+'cc4360/fff/image7.jpg',
-        lp+'work-desk.jpg', lp+'phone-app.png', lp+'bg-gr-v.png'
+        lp + 'team1.jpg',
+        lp + 'team2.jpg',
+        lp + 'team3.jpg',
+        plp + '78c5d6/fff',
+        plp + '459ba8/fff',
+        plp + '79c267/fff',
+        plp + 'c5d647/fff',
+        plp + 'f28c33/fff',
+        plp + 'e868a2/fff',
+        plp + 'cc4360/fff',
+        lp + 'work-desk.jpg',
+        lp + 'phone-app.png',
+        lp + 'bg-gr-v.png'
       ];
 
       // Set up GrapesJS editor with the MJML plugin
