--- a/index.html
+++ b/index.html
@@ -327,9 +327,19 @@
                   <img class="sp-logo" src="./img/braze_logo.svg"/>
                 </a>
               </div>
+              <div class="sp-gold-item">
+                <a href="https://veepn.com/vpn-apps/download-vpn-for-pc/" target="_blank" class="block">
+                  <img class="sp-logo" src="./img/logo_veepn.png" style="width: 150px" alt="Download the Best Windows VPN for PC"/>
+                </a>
+              </div>
             </div>
             <div class="sp-sup">
-              <!-- https://opencollective.com/grapesjs#support -->
+              <!--
+                  https://opencollective.com/grapesjs#support
+                  https://opencollective.com/grapesjs/tiers/gold-sponsors.svg
+                  https://opencollective.com/grapesjs/tiers/sponsors.svg
+                  https://opencollective.com/grapesjs/tiers/backers.svg
+              -->
             </div>
           </div>
           <br><br><br>
